--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,12 @@ body {
    color: var(--light_color);
 }
 
-
 .header-logo {
    font-family: var(--second-family);
    font-weight: 700;
    font-size: 26px;
    letter-spacing: 0.03em;
-   color:var(--second_dark_color);
+   color: var(--second_dark_color);
 }
 
 .logo-span {
@@ -78,10 +77,11 @@ body {
    letter-spacing: 0.06em;
    text-transform: uppercase;
    text-align: left;
-   color:var(--light_color);
+   color: var(--light_color);
 }
-.team{
-   background-attachment:var(--shadw_light_color);
+
+.team {
+   background-attachment: var(--shadw_light_color);
 }
 
 .hero-button {
@@ -91,7 +91,7 @@ body {
    line-height: 1.87;
    letter-spacing: 0.06em;
    text-align: left;
-   color:var(--light_color);
+   color: var(--light_color);
    background-color: var(--main_color);
 }
 
@@ -112,16 +112,17 @@ body {
    letter-spacing: 0.03em;
    color: var(--second_light_color);
 }
-.wat-we-do-title{
-font-family: var(--font-family);
-font-weight: 700;
-font-size: 36px;
-letter-spacing: 0.03em;
-text-align:center;
-color: var(--dark_color);
+
+.wat-we-do-title {
+   font-family: var(--font-family);
+   font-weight: 700;
+   font-size: 36px;
+   letter-spacing: 0.03em;
+   text-align: center;
+   color: var(--dark_color);
 }
 
-.team-title{
+.team-title {
    font-family: var(--font-family);
    font-weight: 500;
    font-size: 16px;
@@ -129,13 +130,14 @@ color: var(--dark_color);
    text-align: left;
    color: var(--dark_color);
 }
-.team-hero-title{
-font-family: var(--font-family);
-font-weight: 700;
-font-size: 36px;
-letter-spacing: 0.03em;
-text-align: center;
-color:var(--dark_color);
+
+.team-hero-title {
+   font-family: var(--font-family);
+   font-weight: 700;
+   font-size: 36px;
+   letter-spacing: 0.03em;
+   text-align: center;
+   color: var(--dark_color);
 }
 
 .team-description {
@@ -169,7 +171,7 @@ color:var(--dark_color);
    font-size: 14px;
    line-height: 1.71;
    letter-spacing: 0.03em;
-   color:var(--light_color);
+   color: var(--light_color);
 }
 
 .footer {
@@ -183,17 +185,19 @@ color:var(--dark_color);
 .footer-link:hover {
    color: var(--main_color);
 }
-.nav-link{
+
+.nav-link {
    color: var(--second_dark_color);
 }
-.footer-link{
-color: var(--second_light_color);
-font-family: var(--font-family);
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
+
+.footer-link {
+   color: var(--second_light_color);
 }
+
+.address-link {
+   color: var(--dark_color);
+}
+
 
 .portfolio-button {
    font-family: var(--font-family);
@@ -208,19 +212,21 @@ letter-spacing: 0.03em;
 .portfolio-button:hover {
    background-color: var(--main_color);
 }
-.portfolio-description{
-font-family: var(--font-family);
-font-weight: 400;
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.03em;
-color: var(--second_light_color);
+
+.portfolio-description {
+   font-family: var(--font-family);
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.87;
+   letter-spacing: 0.03em;
+   color: var(--second_light_color);
 }
-.portfolio-title{
-font-family: var(--font-family);
-font-weight: 700;
-font-size: 18px;
-line-height: 2.0;
-letter-spacing: 0.06em;
-color: var(--dark_color);
+
+.portfolio-title {
+   font-family: var(--font-family);
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 2.0;
+   letter-spacing: 0.06em;
+   color: var(--dark_color);
 }
