--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ body {
    color: var(--shadw_light_color);
 
 }
+.address-link{
+   color: var(--second_light_color);
+   }
+
 
 .header-logo:hover {
    color: var(--main_color);
