--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,9 @@ body {
 .nav-link {
    color: var(--second_dark_color);
 }
-
+.footer-link {
+   color: var(--second_light_color);
+}
 
 .address-link {
    color: var(--dark_color);
