--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,20 @@ body {
    color: var(--light_color);
 }
 
+.container {
+   width: 1200px;
+   margin: 0 auto;
+   padding: 0 15px;
+   /* border: 5px solid tomato; */
+   outline: 1px dashed tomato;
+
+}
+
+.header {
+   padding-top: 24px;
+   padding-bottom: 25px;
+}
+
 .header-logo {
    font-family: var(--second-family);
    font-weight: 700;
@@ -66,7 +80,9 @@ body {
 }
 
 .hero {
-   background-color: var(--shadow_dark_color);
+   padding-top: 200px;
+   padding-bottom: 200px;
+   background-color: var(--shadow_dark_color)
 }
 
 .hero-title {
@@ -95,6 +111,11 @@ body {
    background-color: var(--main_color);
 }
 
+.features {
+   padding-top: 94px;
+   padding-bottom: 0;
+}
+
 .features-title {
    font-family: var(--font-family);
    font-weight: 700;
@@ -113,6 +134,11 @@ body {
    color: var(--second_light_color);
 }
 
+.wat-we-do {
+   padding-top: 94px;
+   padding-bottom: 94px;
+}
+
 .wat-we-do-title {
    font-family: var(--font-family);
    font-weight: 700;
@@ -120,6 +146,11 @@ body {
    letter-spacing: 0.03em;
    text-align: center;
    color: var(--dark_color);
+}
+
+.team {
+   padding-top: 94px;
+   padding-bottom: 94px;
 }
 
 .team-title {
@@ -149,6 +180,12 @@ body {
    color: var(--second_light_color);
 }
 
+.footer {
+   padding-top: 60px;
+   padding-bottom: 60px;
+   background-color: var(--shadow_dark_color);
+}
+
 .footer-logo {
    font-family: var(--second-family);
    font-weight: 700;
@@ -174,10 +211,6 @@ body {
    color: var(--light_color);
 }
 
-.footer {
-   background-color: var(--shadow_dark_color);
-}
-
 .footer-logo:hover {
    color: var(--main_color);
 }
@@ -189,6 +222,7 @@ body {
 .nav-link {
    color: var(--second_dark_color);
 }
+
 .footer-link {
    color: var(--second_light_color);
 }
