--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,25 @@ body {
    font-size: 14px;
    letter-spacing: 0.03em;
    font-weight: 700;
-   line-height: 1.5;
    color: var(--light_color);
 }
-
 .container {
    width: 1200px;
    margin: 0 auto;
    padding: 0 15px;
    /* border: 5px solid tomato; */
    outline: 1px dashed tomato;
-
+}
+.nav-list,
+.nav,
+.features-list,
+.wat-we-do-list,
+.team-list,
+.flex {
+    display: flex;
+    align-items: center;
+    outline: 1px dashed red;
+ 
 }
 
 .header {
@@ -34,7 +42,9 @@ body {
    padding-bottom: 25px;
 }
 
+
 .header-logo {
+   margin-right: 93px;
    font-family: var(--second-family);
    font-weight: 700;
    font-size: 26px;
@@ -66,19 +76,42 @@ body {
    color: var(--shadw_light_color);
 
 }
+.address-link {
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 14px;
+letter-spacing: 0.02em;
+color: var(--second_light_color);
+}
+
 
 .header-logo:hover {
    color: var(--main_color);
+}
+.nav{
+   margin-right:  344px;;
+}
+.nav-item{
+   margin-right: 50px;
 }
 
 .nav-link:hover {
    color: var(--main_color);
 }
+.nav-item:not(:last-child) {
+   margin-right: 50px;
+ }
+
 
 .address-link:hover {
    color: var(--main_color);
 }
 
+.contact-item:not(:last-child) {
+   margin-right: 50px;
+   margin-bottom: 10px;
+ }
+ 
 .hero {
    padding-top: 200px;
    padding-bottom: 200px;
@@ -94,6 +127,11 @@ body {
    text-transform: uppercase;
    text-align: left;
    color: var(--light_color);
+}
+.flex-hero{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .team {
@@ -140,6 +178,7 @@ body {
 }
 
 .wat-we-do-title {
+   padding-bottom: 50px;
    font-family: var(--font-family);
    font-weight: 700;
    font-size: 36px;
@@ -147,11 +186,27 @@ body {
    text-align: center;
    color: var(--dark_color);
 }
+.wat-we-do-item:not(:last-child){
+   margin-right: 30px;
+
+}
 
 .team {
    padding-top: 94px;
    padding-bottom: 94px;
+   background-color: #F5F4FA;
 }
+.team-item:not(:last-child){
+   margin-right: 30px;
+
+}
+.team-item{
+   border-radius: 0 0 4px 4px;
+    width: 270px;
+    height: 368px;
+    background-color: var(--light_color);
+}
+
 
 .team-title {
    font-family: var(--font-family);
@@ -163,6 +218,7 @@ body {
 }
 
 .team-hero-title {
+   padding-bottom: 50px;
    font-family: var(--font-family);
    font-weight: 700;
    font-size: 36px;
@@ -187,6 +243,7 @@ body {
 }
 
 .footer-logo {
+   margin-bottom: 20px;
    font-family: var(--second-family);
    font-weight: 700;
    font-size: 26px;
@@ -201,14 +258,22 @@ body {
    letter-spacing: 0.03em;
    color: var(--main_color);
 }
+.footer-item{
+   margin-bottom: 10px;
+}
+
 
 .address-discription {
+   margin-bottom: 10px;
    font-family: var(--font-family);
    font-weight: 400;
    font-size: 14px;
    line-height: 1.71;
    letter-spacing: 0.03em;
    color: var(--light_color);
+}
+.address-item{
+   margin-bottom: 10px;
 }
 
 .footer-logo:hover {
@@ -226,12 +291,6 @@ body {
 .footer-link {
    color: var(--second_light_color);
 }
-
-.address-link {
-   color: var(--dark_color);
-}
-
-
 .portfolio-button {
    font-family: var(--font-family);
    font-weight: 500;
@@ -243,6 +302,7 @@ body {
 }
 
 .portfolio-button:hover {
+   color: var(--light_color);
    background-color: var(--main_color);
 }
 
