--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ body {
 .nav,.nav-p,
 .wat-we-do-list,
 .team-list,
-.flex,.container-p,.footer-logo {
+.flex,.container-p,
+.footer-logo  {
     display: flex;
     align-items: center;
     outline: 1px dashed red;
@@ -138,6 +139,13 @@ color: var(--second_light_color);
 }
 
 .hero-button {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border-radius: 4px;
+   width: 216px;
+   height: 50px;
+   margin-top: 30px;
    font-family: var(--font-family);
    font-weight: 700;
    font-size: 16px;
@@ -296,6 +304,10 @@ color: var(--second_light_color);
 .footer-link {
    color: var(--second_light_color);
 }
+.portfolio{
+   margin-bottom: 94px;
+}
+
 .portfolio-button-list{
   outline: 1px dashed red;
   margin-top: 94px;
@@ -304,7 +316,11 @@ color: var(--second_light_color);
 
 }
 .portfolio-button {
-  
+   border-radius: 4px;
+   /* border-style: none; */
+   border: 0;
+   width: auto;
+   height: 38px;
    font-family: var(--font-family);
    font-weight: 500;
    font-size: 16px;
