--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ color: var(--second_light_color);
    align-items: center;
    justify-content: center;
    border-radius: 4px;
+   border: 0;
    width: 216px;
    height: 50px;
    margin-top: 30px;
