--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ color: var(--second_light_color);
    width: 16px;
    height: 16px;
    content: "";
-   background-image: url(../images/Group.svg);
+   background-image: url(../images/group.svg);
    background-repeat: no-repeat;
 
 }
@@ -211,7 +211,7 @@ color: var(--second_light_color);
    content: '';
    border-radius: 4px;
    background-color: var(--shadw_light_color);
-   background-image: url("../images/antenna\ 1.svg");
+   background-image: url(../images/antenna1.svg);
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: 30px;
@@ -224,7 +224,7 @@ color: var(--second_light_color);
    content: '';
    border-radius: 4px;
    background-color: var(--shadw_light_color);
-   background-image: url("../images/clock\ 1.svg") ;
+   background-image: url(../images/clock1.svg) ;
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: 30px;
@@ -236,7 +236,7 @@ color: var(--second_light_color);
    content: '';
    border-radius: 4px;
    background-color: var(--shadw_light_color);
-   background-image:url("../images/diagram\ 1.svg");
+   background-image:url(../images/diagram1.svg);
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: 30px;
@@ -248,7 +248,7 @@ color: var(--second_light_color);
    content: '';
    border-radius: 4px;
    background-color: var(--shadw_light_color);
-   background-image:url("../images/astronaut\ 1.svg") ;
+   background-image:url(../images/astronaut1.svg) ;
    background-repeat: no-repeat;
    background-position: center;
    margin-bottom: 30px;
