--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,26 @@ body {
    margin-right: 30px;
 
 }
+.wat-we-do-item{
+   position: relative;
+}
+.item-title{
+width: 370px;
+height: 70px;
+position: absolute;
+bottom: 0;
+display: flex;
+align-items: center;
+justify-content: center;
+font-family: var(--font-family);
+font-weight: 700;
+font-size: 14px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+text-align: center;
+color: #fff;
+background: rgba(47, 48, 58, 0.8);
+}
 
 .team {
    padding-top: 94px;
