--- a/css/reset.css
+++ b/css/reset.css
@@ -50,3 +50,28 @@ input[type="checkbox"]:checked {
 textarea{
     outline: none;
 }
+input, textarea {
+  background-color: white !important; /* ваш фон */
+  box-shadow: none !important;
+}
+
+input::selection {
+  background: transparent;
+}
+
+input:focus {
+  background-color: white;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: #000 !important;
+}
+.modal-input:has(input:valid:focus) {
+  border-color: green;
+}
+
+.modal-input:has(input:invalid:focus) {
+  border-color: red;
+}
