--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,14 @@ body {
 }
 
 .header {
+   position: fixed;
+   top: 0;
+   z-index: 1;
+   width: 100%;
    padding-top: 24px;
    padding-bottom: 25px;
    border-bottom: 1px solid var(--second_light_color);
+   background-color: var(--light_color);
 }
 .main{
   display:flex ;
@@ -78,6 +83,39 @@ body {
    letter-spacing: 0.02em;
    color: var(--second_dark_color);
 }
+.nav-item{
+   position: relative;
+   transform: scale(1);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.nav-item::after{
+   content: "";
+    position: absolute;
+    bottom: -32px;
+    left: 0;
+    width:100% ;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--main_color);
+    opacity: 0;
+    transform: scaleX(0);
+    transition:
+        transform 500ms cubic-bezier(0.83, -0.08, 0.32, 1) 100ms,
+        opacity 500ms cubic-bezier(0.83, -0.08, 0.32, 1) 100ms;
+        
+
+}
+.nav-item:hover:after {
+    opacity: 1;
+    transform: scaleX(1);
+}
+
+
+.nav-item:hover {
+    cursor: pointer;
+}
+
 
 .address-list {
    font-family: var(--font-family);
@@ -634,6 +672,7 @@ border-radius: 4px;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: rgba(33, 150, 243, 0);  
 border: 1px solid rgba(255, 255, 255, 0.3);
+color: var(--light_color);
 }
 .footer-button{
 width: 200px;
@@ -722,7 +761,7 @@ background: var(--main_color) ;
    display: flex;
    flex-direction: column;
    border-radius: 4px;
-   box-shadow: 0 4px 4px 0 var(--shadow);
+   
 }
 .portfolio-box{
    /* ! */
@@ -733,5 +772,44 @@ background: var(--main_color) ;
    flex-grow: 1;
    padding: 24px;
 }
+.overlay-text{
+font-family: var(--font-family);
+font-weight: 400;
+font-size: 18px;
+line-height: 156%;
+letter-spacing: 0.03em;
+color: var(--light_color);
+}
+.card-overlay-box{
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+.overlay-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding: 63px 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 156%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
+    color: var(--light_color);
+    background-color: rgba(33, 150, 243, 0.9);
 
-
+}
+.portfolio-item:hover .overlay-text,
+.portfolio-item:focus .overlay-text {
+    transform: translate(0);
+}
+.item-link:hover{
+   box-shadow: 0 4px 4px 0 var(--shadow);
+}
+img{
+   display: block;
+    max-width: 100%;
+    height: auto;
+}
