--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,37 @@ body {
    letter-spacing: 0.02em;
    color: var(--second_dark_color);
 }
-.nav-item{
+.stud{
    position: relative;
    transform: scale(1);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.nav-item::after{
+
+.a:hover{
+   color:var(--main_color);
+
+}
+
+.a{
+   color: var(--second_dark_color);
+}
+
+.s{
+   position: relative;
+}
+
+.s::after{
+    content: "";
+    position: absolute;
+    bottom: -32px;
+    left: 0;
+    width:100% ;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--main_color);
+}
+.stud::after{
    content: "";
     position: absolute;
     bottom: -32px;
@@ -106,13 +130,13 @@ body {
         
 
 }
-.nav-item:hover:after {
+.stud:hover:after {
     opacity: 1;
     transform: scaleX(1);
 }
 
 
-.nav-item:hover {
+.stud:hover {
     cursor: pointer;
 }
 
@@ -146,7 +170,10 @@ body {
    margin-right:  290px;;
 }
 
-.nav-link:hover {
+.a:hover {
+   color: var(--main_color);
+}
+.na{
    color: var(--main_color);
 }
 
@@ -608,9 +635,6 @@ background: rgba(47, 48, 58, 0.8);
    color: var(--main_color);
 }
 
-.nav-link {
-   color: var(--second_dark_color);
-}
 
 .footer-link {
    color: var(--second_light_color);
