--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@ body {
    font-size: 26px;
    letter-spacing: 0.03em;
    color: var(--second_dark_color);
+   transition-property: color;
+   transition-duration: 250ms;
+   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 .logo-span {
@@ -125,8 +129,8 @@ body {
     opacity: 0;
     transform: scaleX(0);
     transition:
-        transform 500ms cubic-bezier(0.83, -0.08, 0.32, 1) 100ms,
-        opacity 500ms cubic-bezier(0.83, -0.08, 0.32, 1) 100ms;
+        transform 300ms cubic-bezier(0.83, -0.08, 0.32, 1) 250ms,
+        opacity 300ms cubic-bezier(0.83, -0.08, 0.32, 1) 250ms;
         
 
 }
@@ -157,6 +161,9 @@ body {
    font-weight: 500;
    letter-spacing: 0.02em;
    fill:var(--second_light_color);
+   transition-property: fill, color;
+   transition-duration: 250ms;
+   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-link:hover {
    fill: var(--main_color);
@@ -547,6 +554,9 @@ background: rgba(47, 48, 58, 0.8);
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
+    transition-property: background-color, fill;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover{
    background-color: var(--main_color);
@@ -576,6 +586,9 @@ background: rgba(47, 48, 58, 0.8);
     justify-content: center;
     align-items: center;
     fill: #AFB1B8;
+    transition-property: border, fill;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .company-link:hover{
    border: 1px solid var(--main_color);
@@ -600,6 +613,9 @@ background: rgba(47, 48, 58, 0.8);
    font-size: 26px;
    letter-spacing: 0.03em;
    color: var(--light_color);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-span {
@@ -638,6 +654,9 @@ background: rgba(47, 48, 58, 0.8);
 
 .footer-link {
    color: var(--second_light_color);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-list{
    margin-right: 70px;
@@ -671,6 +690,9 @@ color: var(--light_color);
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1);
     fill:var(--light_color) ;
+     transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .joing-link:hover{
    background-color: var(--main_color);
@@ -743,6 +765,9 @@ background: var(--main_color) ;
    text-align: center;
    color: var(--dark_color);
    margin-right: 8px;
+   transition-property: color, background-color;
+   transition-duration: 250ms;
+   transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 .portfolio-button:hover {
