--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,7 @@ color: var(--light_color);
     font-size: 18px;
     line-height: 156%;
     transform: translateY(100%);
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--light_color);
     background-color: rgba(33, 150, 243, 0.9);
 
